# Cagnotte_architecture_logiciel

./: README.md  data.db  pyproject.toml
src/archilog/: __init__.py  app.py  functions.py  models.py  views.py
src/archilog/templates/: ajouter_depense_form.html  ajouter_membre_form.html  cagnotte.html  create.html  index.html
