[project]
name = "archilog"
version = "0.1"
description = "Application de gestion de cagnotte - Architecture n-tier"
readme = "README.md"
dependencies = [
    "click>=8.3.1",
    "flask>=3.1.3",
    "sqlalchemy>=2.0.46",
]
requires-python = ">=3.11"

[project.scripts]
archilog = "archilog:cli"

[project.gui-scripts]
archilog-web = "flask:run"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"